test/invalid_confs/invalid_post2.lua
--ERROR: post handler fails
Listen "8080" {
	error_log = { level = "good" },
	static = "./",
}
